feat: backend-go auth api feature
